update:更新功能，修改bug
