# model/State.go
@@ -1,0 +1,7 @@
+package model
+
+type State struct {
+	FileID   uint   `json:"file_id"`
+	WriterID int64  `json:"writer_id"`
+	FileKind string `json:"file_kind"`
+}
